<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_categories_addCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/button_categories_addCategory"
        android:layout_alignParentLeft="true"
        android:inputType="text"
        android:hint="@string/categories_hint_addCategory"
        android:layout_toStartOf="@id/button_categories_addCategory"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_categories_addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@id/recycler_categories"
        android:text="@string/categories_btntext_addCategory"
        android:layout_alignParentEnd="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edittext_categories_addCategory"
        android:layout_above="@id/button_categories_save"
        />

    <Button
        android:id="@+id/button_categories_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/categories_btntext_saveCategories"/>

</RelativeLayout>